sidebar gallery button vertical bar, and button prevent if out of bounds

--- a/berzsak/src/app/components/project/project.component.css
+++ b/berzsak/src/app/components/project/project.component.css
@@ -133,6 +133,7 @@
 }
 
 .sidebar-main {
+  position: relative;
   width: 85%;
   height: auto;
   object-fit: cover;
@@ -142,6 +143,39 @@
 .sidebar-main img {
   width: 100%;
   height: auto;
+}
+
+.sidebar-gallery-switch-btn {
+  position: absolute;
+  width: 100%;
+  top: 3%;
+  right: 2%;
+  display: flex;
+  justify-content: right;
+  z-index: 2000;
+}
+
+.sidebar-gallery-switch-btn button {
+  display: flex;
+  justify-content: center;
+  font-size: 1vw;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.sidebar-gallery-switch-btn button:hover {
+  transform: scale(1.1);
+}
+
+.sidebar .vertical-bar {
+  display: flex;
+  justify-content: center;
+  background: none;
+  border-left: 2px solid black;
+  height: 1.3vw;
+  margin: 0;
 }
 
 /* Gallery inside sidebar */
@@ -176,19 +210,6 @@
 
 .gallery img.active {
   border: 2px solid #000;
-}
-
-.sidebar-gallery-switch-btn {
-  position: relative;
-  justify-self: right;
-  top: 26px;
-  right: 5px;
-  z-index: 2000;
-}
-
-.sidebar-gallery-switch-btn button {
-  background: none;
-  cursor: pointer;
 }
 
 .close-btn {
